# hasklog

./: .editorconfig  .travis.yml  LICENSE  README.rst  hasklog.cabal  prolog.cabal  stack.yaml
doc/: Manual.rst  Manual.tex
examples/: all.pl  all.wam  peano_arithmetic.pl
src/: Main.hs
src/Hasklog/: Compiler.hs  Data.hs  Interpreter.hs  Parser.hs
src/Prolog/: Compiler.hs  Data.hs  Interpreter.hs  Parser.hs  Test.hs
test/: Main.hs  all.pl  crazy_structures.pl  family_trees.pl  lists.pl
test/Hasklog/: InterpreterSpec.hs  ParserSpec.hs
test/Prolog/: InterpreterSpec.hs  ParserSpec.hs
