cabal-version: 2.2
name: hasklog
version: 0.0.1
synopsis: A toy Prolog interpreter/compiler written in Haskell
author: Tim Yates
license: NONE
category: Language

common hasklog-common
    default-language: Haskell2010
    ghc-options: -Wall -Wno-name-shadowing -Wno-orphans
    build-depends:
        transformers,
        parsec >=3,
        mtl >=2,
        containers,
        list-transformer,
        base

library
    import: hasklog-common
    hs-source-dirs: src
    exposed-modules:
        Hasklog.Compiler
        Hasklog.Data
        Hasklog.Interpreter
        Hasklog.Parser

executable hasklog
    import: hasklog-common
    main-is: src/Main.hs
    build-depends: hasklog

test-suite hasklog-tests
    import: hasklog-common
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Main.hs
    other-modules:
        Hasklog.ParserSpec
        Hasklog.InterpreterSpec
    build-depends:
        hasklog,
        hspec
