cabal-version: 2.2
name: prolog
version: 0.0.1
synopsis: A toy Prolog interpreter written in Haskell
author: Tim Yates
license: NONE
category: Language

common prolog-common
    default-language: Haskell2010
    ghc-options: -Wall -Wno-missing-signatures -Wno-name-shadowing -Wno-incomplete-patterns -Wno-orphans
    build-depends:
        transformers,
        parsec >=3,
        mtl >=2,
        containers,
        list-transformer,
        base

library
    import: prolog-common
    hs-source-dirs: src
    exposed-modules:
        Prolog.Compiler
        Prolog.Data
        Prolog.Interpreter
        Prolog.Parser

executable prolog
    import: prolog-common
    main-is: src/Main.hs
    build-depends: prolog

test-suite prolog-tests
    import: prolog-common
    type: exitcode-stdio-1.0
    main-is: src/Prolog/Test.hs
    build-depends:
        prolog,
        HUnit
